references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/InterfaceUsage_Invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:f780ae8eab87bbf4e8ab6bd68874dffb352f4bb9405f03c7f1d06a780611e33a
size 2774
